--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Im header wird der Kopf der Webseite angegeben.
             Dies ist aber nur ein Struktur-Element. Damit der Header auch immer
             ganz oben angezeigt wird, braucht es noch das richtige CSS dafür. -->
-            <h1>Webseite von ...</h1>
+            <h1>Webseite von Sarah Ilhan</h1>
         </header>
 
         <nav>
@@ -50,15 +50,7 @@
                     itaque eaque vel necessitatibus amet consectetur corrupti
                     repudiandae ipsam aliquam sint.
                 </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-                    natus magni non cumque voluptatum similique ullam
-                    temporibus. Magni sequi sunt temporibus ab a nobis quo non,
-                    molestias sapiente dolorum repellendus obcaecati odit, dolor
-                    quae illo ratione, veniam autem id praesentium. Consectetur,
-                    totam asperiores expedita culpa doloribus nesciunt error
-                    architecto dolorum!
-                </p>
+                <p>Hallo, ich heisse</p>
             </section>
 
             <section>
@@ -68,6 +60,9 @@
                     Element gestaltet werden soll. Es werden hier 2 Kinder-Elemente
                     verwendet, damit wir den Effekt von einem Text neben einem Bild
                     einfach hinbekommen können. -->
+                    <div class="image">
+                        <img src="/img/mountains.png" alt="" />
+                    </div>
                     <div class="text">
                         Hier ist eine Beschreibung von dem Bild, oder einfach
                         Text der dazu passen könnte.
