--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -4,9 +4,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Meine Hobbies</title>
+
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
-        <a href="/">Home</a>
-        <h1>Meine Hobbies</h1>
+        <div class="red">
+            <a href="/">Home</a>
+            <h1 class="red">Meine Hobbies</h1>
+            <section class="red">
+                In meiner Freizeit lese ich gerne, höre Musik und gehe zum
+                Ballet. Außerdem male und zeichne ich gerne und treffe mich
+                nebenbei mit Freunden.
+            </section>
+        </div>
     </body>
 </html>
