--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                         Text der dazu passen könnte.
                     </div>
                     <div class="image">
-                        <img src="/img/mountains.png" alt="" />
+                        <img
+                            src="https://i.pinimg.com/736x/64/27/34/642734c04a23f90bebacad5c4163d01a.jpg"
+                            alt=""
+                        />
                     </div>
                 </div>
             </section>
