--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -12,9 +12,45 @@
             <a href="/">Home</a>
             <h1 class="red">Meine Hobbies</h1>
             <section class="red">
-                In meiner Freizeit lese ich gerne, höre Musik und gehe zum
-                Ballet. Außerdem male und zeichne ich gerne und treffe mich
-                nebenbei mit Freunden.
+                In meiner <span class="bigger">Freizeit</span> ...
+
+                <ul>
+                    <li>
+                        höre ich gerne
+                        <span class="bigger">Musik</span>
+                        und
+                        <span class="bigger"> Hörbücher</span>
+                    </li>
+                    <li>
+                        <span class="bigger"> backe</span>
+
+                        ich Zimtschnecken
+                    </li>
+                    <li>
+                        spiele ich
+                        <span class="bigger"> Tennis</span>
+                        und
+                        <span class="bigger"> Monopoly </span>
+                    </li>
+                    <li>
+                        gehe ich zum
+                        <span class="bigger"> Ballet</span>
+                    </li>
+
+                    <li>
+                        <span class="bigger"> lerne</span>
+                        ich
+                    </li>
+                    <li>
+                        verabrede mich mit meinen
+                        <span class="bigger"> Freunden</span>
+                    </li>
+                    <li>
+                        <span class="bigger"> </span>
+                    </li>
+
+                    <li></li>
+                </ul>
             </section>
         </div>
     </body>
