--- a/index.html
+++ b/index.html
@@ -46,7 +46,21 @@
                     <!-- Mit dem p-Element Teilt man einen Text in Paragraphen
                     ein. Das p-Element hat meistens nur noch Text, Links oder
                     Bilder drin, sonst keine weiteren Elemente. -->
-                    Hallo ich heisse Sarah:)
+                    Hallo ich heisse Sarah Ilhan und bin 16 Jahre alt. Vor ein
+                    paar Monaten bin ich mit meiner Familie in die Schweiz
+                    gezogen und besuche jetzt das Gymnasium mit dem Schwerpunkt
+                    Spanisch. Am Anfang war ich ein bisschen traurig, dass ich
+                    meine Freunde zurücklassen musste, aber dafür konnte ich
+                    schon ein paar neue Freundschaften in der Klasse schließen.
+                    Nach der Schule, möchte ich vielleicht ein Auslandsjahr
+                    machen, jedoch habe ich mich noch nicht entschieden wo
+                    genau. Danach ist es mein Ziel, an einer Universität zu
+                    studieren. Was ich studieren möchte, habe ich noch nicht
+                    entschieden, aber ich interessiere mich besonders für den
+                    Beruf Kriminalpsychologin und würde daher wahrscheinlich den
+                    Studiengang Psychologie wählen. Aber zum Glück habe ich noch
+                    etwas Zeit darüber nachzudenken, sodass sich meine Meinung
+                    natürlich wieder ändern könnte.
                 </p>
                 <p></p>
             </section>
