--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                     Element gestaltet werden soll. Es werden hier 2 Kinder-Elemente
                     verwendet, damit wir den Effekt von einem Text neben einem Bild
                     einfach hinbekommen können. -->
-                    <div class="image">
-                        <img src="/img/mountains.png" alt="" />
-                    </div>
+                    <div class="image"></div>
                     <div class="text">
                         Hier ist eine Beschreibung von dem Bild, oder einfach
                         Text der dazu passen könnte.
