--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
             <ul>
                 <li>
-                    <a href="./pages/Lieblingsfilme.html">Hobbies</a>
+                    <a href="./pages/hobbies.html">Hobbies</a>
                 </li>
                 <li>
-                    <a href="Lieblingsfilme./pages.html">Lieblingsfilme</a>
+                    <a href="./pages/filme.html">Lieblingsfilme</a>
                 </li>
             </ul>
         </nav>
@@ -64,6 +64,7 @@
                     schon ein paar neue Freundschaften in der Klasse schließen.
                 </p>
             <section>
+                <h1> Meine Zukunftspläne</h1>
                 <p>
                     Nach der Schule, möchte ich vielleicht ein Auslandsjahr
                     machen, jedoch habe ich mich noch nicht entschieden wo
