--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                     <div class="text">
                         <section>
-                            <h2>Balllet-Mein Lieblingshobby</h2>
+                            <h2>Ballet-Mein Lieblingshobby</h2>
                             <p>
                                 Das Bild habe ich gewählt, weil ich in meiner
                                 Freizeit Ballet tanze und es eines meiner
@@ -145,7 +145,7 @@
           <body>
           <svg width="300" height="200">
           <polygon points="100,10 40,198 190,78 10,78 160,198"
-          style="fill:plum;stroke:plum;stroke-width:5;fill-rule:evenodd;">
+          style="fill:khaki;stroke:khaki;stroke-width:5;fill-rule:evenodd;">
           <animate attributeName="fill" values="lime;red;lime" dur="2s" repeatCount="indefinite" />
           <animate attributeName="points"
           values="100,10 40,198 190,78 10,78 160,198;
